@@ -1,5 +1,8 @@
 2012-01-16  Takashi Kato  <ktakashi@ymail.com>
 
+	* ext/regex/regex2.c (unescape_char): fixed reading \xhh.
+	added \uhhhh and \Uhhhhhhhh.
+
 	* src/null.stub (quotient remainder modulo): modified to raise an
 	&assertion when divisor was 0.
 
